tests/negative/logical_non_bool.ax
module logical_non_bool;

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    if 1 && 2 {
        return 1;
    }
    return 0;
}
